// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-pagination-item should render as ellipsis type: render as ellipsis type 1`] = `
<ic-pagination-item page="1" type="ellipsis">
  <template shadowrootmode="open">
    <a>
      <div class="ellipsis item-container">
        <ic-typography variant="label">
          ...
        </ic-typography>
      </div>
    </a>
  </template>
</ic-pagination-item>
`;

exports[`ic-pagination-item should render as selected item: render as selected item 1`] = `
<ic-pagination-item page="1" selected="" type="page">
  <template shadowrootmode="open">
    <a>
      <button aria-current="page" aria-label="Page: 1" class="item-container page selected" role="button" tabindex="-1">
        <ic-typography class="page-selected" variant="label">
          1
        </ic-typography>
      </button>
    </a>
  </template>
</ic-pagination-item>
`;

exports[`ic-pagination-item should render default pagination item: render default pagination item 1`] = `
<ic-pagination-item page="1">
  <template shadowrootmode="open">
    <a>
      <ic-typography aria-live="polite" class="simple-current" variant="label">
        Page 1
      </ic-typography>
    </a>
  </template>
</ic-pagination-item>
`;

exports[`ic-pagination-item should render disabled ellipsis type: render disabled ellipsis type 1`] = `
<ic-pagination-item disabled="" page="1" type="ellipsis">
  <template shadowrootmode="open">
    <a>
      <div class="disabled ellipsis item-container">
        <ic-typography variant="label">
          ...
        </ic-typography>
      </div>
    </a>
  </template>
</ic-pagination-item>
`;

exports[`ic-pagination-item should render disabled: disabled-removed 1`] = `
<ic-pagination-item page="1" type="page">
  <template shadowrootmode="open">
    <a>
      <button aria-label="Go to Page 1" class="item-container page" role="button" tabindex="0">
        <ic-typography variant="label">
          1
        </ic-typography>
      </button>
    </a>
  </template>
</ic-pagination-item>
`;

exports[`ic-pagination-item should render disabled: render disabled 1`] = `
<ic-pagination-item disabled="" page="1" type="page">
  <template shadowrootmode="open">
    <a>
      <button aria-label="Go to Page 1" class="disabled item-container page" disabled="" role="button" tabindex="0">
        <ic-typography class="disabled" variant="label">
          1
        </ic-typography>
      </button>
    </a>
  </template>
</ic-pagination-item>
`;

exports[`ic-pagination-item should render with custom label: render with custom label 1`] = `
<ic-pagination-item label="screen" page="1">
  <template shadowrootmode="open">
    <a>
      <ic-typography aria-live="polite" class="simple-current" variant="label">
        Screen 1
      </ic-typography>
    </a>
  </template>
</ic-pagination-item>
`;

exports[`ic-pagination-item should render with dark appearance: render with dark appearance 1`] = `
<ic-pagination-item appearance="dark" page="1" type="page">
  <template shadowrootmode="open">
    <a>
      <button aria-label="Go to Page 1" class="item-container page" role="button" tabindex="0">
        <ic-typography variant="label">
          1
        </ic-typography>
      </button>
    </a>
  </template>
</ic-pagination-item>
`;

exports[`ic-pagination-item should render with light appearance: render with light appearance 1`] = `
<ic-pagination-item appearance="light" page="1" type="page">
  <template shadowrootmode="open">
    <a>
      <button aria-label="Go to Page 1" class="item-container page" role="button" tabindex="0">
        <ic-typography variant="label">
          1
        </ic-typography>
      </button>
    </a>
  </template>
</ic-pagination-item>
`;
